--- a/design/frontend/base/default/template/commerceconnector/listSellers.phtml
+++ b/design/frontend/base/default/template/commerceconnector/listSellers.phtml
@@ -12,7 +12,7 @@
 <ul class="commerce-connector--shops-list">
 <?php foreach ($shoplist as $key => $value) { ?>
     <li>
-        <a href="<?php echo $value['DEEPLINK']; ?>">
+        <a href="<?php echo $value['DEEPLINK']; ?>" target="_blank">
             <img src="<?php echo $value['shopdata']['LOGO']; ?>" alt="<?php echo $value['shopdata']['NAME']; ?>" title="<?php echo $value['shopdata']['NAME']; ?>"/>
         </a>
     </li>
